<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.snapshotflow</groupId>
  <artifactId>snapshotflow-java</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>SnapshotFlow Java SDK</name>
  <description>Official Java client for the SnapshotFlow screenshot API — capture, batch, diff, async jobs, history and webhook verification.</description>
  <url>https://github.com/snapshot-flow/java-sdk</url>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/licenses/MIT</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <organization>
    <name>SnapshotFlow</name>
    <url>https://snapshotflow.com</url>
  </organization>

  <developers>
    <developer>
      <id>snapshotflow</id>
      <name>SnapshotFlow</name>
      <url>https://snapshotflow.com</url>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://github.com/snapshot-flow/java-sdk.git</connection>
    <developerConnection>scm:git:git@github.com:snapshot-flow/java-sdk.git</developerConnection>
    <url>https://github.com/snapshot-flow/java-sdk</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <!-- Java 8 baseline: the transport runs on the JDK's HttpURLConnection, so the
         SDK pulls in no HTTP dependency of its own. Compiled here with JDK 17. -->
    <maven.compiler.release>8</maven.compiler.release>

    <jackson.version>2.17.2</jackson.version>
    <junit.version>5.10.2</junit.version>
  </properties>

  <dependencies>
    <!-- JSON (the only runtime dependency). Jackson is ubiquitous on the JVM
         server stack that consumes this API; all parsing is isolated behind
         com.snapshotflow.internal.Json so it can be swapped if ever needed. -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>

    <!-- Tests -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
      </plugin>

      <!-- Source jar — required for Maven Central, useful for IDE navigation. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals><goal>jar-no-fork</goal></goals>
          </execution>
        </executions>
      </plugin>

      <!-- Javadoc jar — required for Maven Central. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <quiet>true</quiet>
          <doclint>none</doclint>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals><goal>jar</goal></goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <!-- Activate with `-P release` when publishing. Keeps local `mvn test`
         free of GPG-key requirements. -->
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <!-- GPG-sign every artifact (Maven Central requires .asc signatures). -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.4</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals><goal>sign</goal></goals>
              </execution>
            </executions>
            <configuration>
              <!-- Headless signing in CI (no interactive pinentry). -->
              <gpgArguments>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
            </configuration>
          </plugin>

          <!-- Upload the signed bundle to the Sonatype Central Portal.
               `mvn -P release deploy` publishes; credentials come from the
               `central` server id in settings.xml. -->
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.7.0</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>central</publishingServerId>
              <!-- false: upload, then click "Publish" in the portal to review first.
                   Set true once you trust the pipeline to auto-release. -->
              <autoPublish>false</autoPublish>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
